--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  justify-content:space-between;
+  display: inline-flexbox;
 }
 
 .App-logo {
@@ -35,4 +37,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.btn {
+  background-color: lightcoral;
+  border-radius: 0.25em;
+  display: inline;
+  justify-content: space-evenly;
+  color: aliceblue;
+  padding: 1em;
 }
