--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,6 @@
   border-radius: 0.25em;
   display: inline;
   justify-content: space-evenly;
-  color: aliceblue;
+  color: rgba(240, 248, 255, 0.952);
   padding: 1em;
 }
