add info and complete login form

--- a/src/Components/form/form.css
+++ b/src/Components/form/form.css
@@ -2,4 +2,16 @@
     display:inline-block;
     width:450px;
     background-color: bisque;
+    padding: 2px;
+    border-radius: 5px;
+    margin: 10px;
+}
+ul {
+    list-style-type: none;
+}
+li {
+    margin: 5px;
+}
+b {
+    margin: 5px;
 }
