--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,13 @@
   color: rgba(240, 248, 255, 0.952);
   padding: 1em;
 }
+footer {
+  position:absolute;
+  width: 100%;
+  height: 50px;
+  background-color: rgb(211, 241, 37);
+  bottom: 0;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  padding: 5px;
+}
