--- a/src/Components/navigation/navigation.css
+++ b/src/Components/navigation/navigation.css
@@ -21,5 +21,15 @@
     text-decoration: none;
     margin-inline-end: 0.5em;
     padding: 0.25em;
+}
+li {
+    padding: 7.5px;
     display: inline-block;
+}
+.btn{
+    position: absolute;
+    left: 10px;
+    padding: 2px;
+    margin: 2px;
+    top: 10px;
 }
