--- a/src/Components/aside/aside.css
+++ b/src/Components/aside/aside.css
@@ -1,8 +1,9 @@
 aside {
     width: 200px;
     height: 40%;
-    position: absolute;
+    position:fixed;
     right: 0;
+    top: 80px;
     margin: 15px;
     background-color: #cfc09f;
     border-radius: 7.5px;
