--- a/src/Components/register/register.css
+++ b/src/Components/register/register.css
@@ -1,4 +1,4 @@
-.login {
+.register {
     display:inline-block;
     width:450px;
     background-color: bisque;
@@ -26,6 +26,9 @@ a.register {
     background-color: rgb(223, 185, 139);
     border-radius: 5px;
     width: 235px;
+}
+a.register:hover {
+    background-color: rgb(221, 166, 99);
 }
 li a i {
     font-style: italic;
