--- a/src/Components/contacts/contacts.css
+++ b/src/Components/contacts/contacts.css
@@ -1,6 +1,6 @@
 #contacts {
     width: 250px;
-    height: 450px;
+    height: 325px;
     background-color: moccasin;
     color: rgb(10, 10, 200);
     justify-content: center;
@@ -13,6 +13,7 @@
     font-size: 16px;
     font-weight: 400;
     text-align: center;
+    filter: drop-shadow(10px 10px 4px #5e5e61);
 }
 #contacts i {
     margin: 5px;
