--- a/src/Components/container/container.css
+++ b/src/Components/container/container.css
@@ -5,4 +5,6 @@
     background-color: rgb(185, 252, 0);
     border-radius: 0.25em;
     margin: 20px;
+    filter: drop-shadow(10px 10px 4px #5e5e61);
+    border-radius: 5px;
 }
