--- a/src/Components/register/register.css
+++ b/src/Components/register/register.css
@@ -5,6 +5,7 @@
     padding: 2px;
     border-radius: 5px;
     margin: 20px;
+    filter: drop-shadow(10px 10px 4px #5e5e61);
 }
 ul {
     list-style-type: none;
