--- a/src/Components/aside/aside.css
+++ b/src/Components/aside/aside.css
@@ -3,10 +3,11 @@ html {
 }
 aside {
     width: 200px;
-    height: 40%;
+    min-height: 40%;
     position:fixed;
     right: 0;
-    top: 80px;
+    top: 130px;
+    display: inline-block;
     margin: 15px;
     background-color: rgba(251, 243, 149, 0.904);
     border-radius: 7.5px;
