--- a/src/Components/navigation/navigation.css
+++ b/src/Components/navigation/navigation.css
@@ -4,7 +4,7 @@
     color: black;
     text-align: end;
     width: 100%;
-    height: 65px;
+    min-height: 100px;
     font-size: large;
     vertical-align: initial;
     position: relative;
