--- a/src/Components/gallery/gallery.css
+++ b/src/Components/gallery/gallery.css
@@ -2,11 +2,14 @@ img {
     width: 350px;
     border: 3px solid greenyellow;
     border-radius: 5px;
-    display: inline-block;
+    display: flex;
+    height: fit-content;
 }
 ul .img {
     position: relative;
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    flex-basis: auto;
     width: 70%;
     left: 0%;
     padding: 1rem;
